# vuliscan-agent-clean

./: .cursorrules  .env.examples  .gitignore  README.md  pyproject.toml
agent/: __init__.py  prompts.py  scanner.py  schemas.py  scoring.py
agent/agent/: config.py
eval/: baseline_cursor_claude.md  generate_cursor_prompts.py  run_eval.py  run_eval_full.py  score_cursor_claude_outputs.py
eval/cursor_claude_outputs/: case_command_injection_1.json  case_hardcoded_secret_1.json  case_path_traversal_1.json  case_pickle_1.json  case_sql_injection_1.json  score comparison.txt
eval/cursor_prompts/: case_command_injection_1.txt  case_hardcoded_secret_1.txt  case_path_traversal_1.txt  case_pickle_1.txt  case_sql_injection_1.txt
eval/datasets/: cases.jsonl
scripts/: scan_diff.py  scan_path.py
