[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vuliscan-agent"
version = "0.1.0"
description = "VULISCAN agent: Python-focused code risk analyser and vulnerability finder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "rich>=13.7.0",
]

[project.scripts]
vuliscan-scan-path = "scripts.scan_path:main"
vuliscan-scan-diff = "scripts.scan_diff:main"

[tool.setuptools]
packages = ["agent", "eval"]
